--- a/inner/index.html
+++ b/inner/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
       <h1>Заголовок</h1>  
-      <p><a><img src="\my-project\img\picture_1.jpg" alt="Абсолютный"></a>Абсолютный путь к картинке</p>
+      <p><a><img src="img/picture_1.jpg" alt="Абсолютный"></a>Абсолютный путь к картинке</p>
       <p><a><img src="..\..\img\picture_2.jpg" alt="Относительный"/></a>Относительный путь</p>
 
       <p>Тут могла бы быть ваша реклама</p>
