--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
       <h1>Заголовок</h1>  
-      <p><a><img src="img\picture_1.jpg" alt="Абсолютный"></a>Абсолютный путь к картинке</p>
+      <p><a><img src="\project\img\picture_1.jpg" alt="Абсолютный"></a>Абсолютный путь к картинке</p>
       <p><a><img src="..\..\img\picture_2.jpg" alt="Относительный"/></a>Относительный путь</p>
 
       <p>Тут могла бы быть ваша реклама</p>
