--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
       <h1>Заголовок</h1>  
       <p><a><img src="https://github.com/warefare/project/blob/b6458c9ba64ebe9a936e609ec60876717222ced0/img/picture_1.jpg" alt="Абсолютный"></a>Абсолютный путь к картинке</p>
       <p><a><img src="..\..\img\picture_2.jpg" alt="Относительный"/></a>Относительный путь</p>
-
       <p>Тут могла бы быть ваша реклама</p>
-
-      
 </body>
 </html>
