--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+ 
 <head>
-  <meta charset="UTF-8" />
-  <title>Document</title>
+   <meta charset="UTF-8">
 </head>
+ 
 <body>
-      <h1>Заголовок</h1>  
-      <p><a><img src="https://github.com/warefare/project/blob/b6458c9ba64ebe9a936e609ec60876717222ced0/img/picture_1.jpg" alt="Абсолютный"></a>Абсолютный путь к картинке</p>
-      <p><a><img src="..\..\img\picture_2.jpg" alt="Относительный"/></a>Относительный путь</p>
-      <p>Тут могла бы быть ваша реклама</p>
+  <h1>Заголовок</h1>  
+  <p><a><img src="\img\picture_1.jpg" alt="Абсолютный"></a>Абсолютный путь к картинке</p>
+  <p><a><img src="..\..\img\picture_2.jpg" alt="Относительный"/></a>Относительный путь</p>
+  <p>Тут могла бы быть ваша реклама</p>
 </body>
+ 
 </html>
