--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -7,7 +7,7 @@
  
 <body>
   <h1>Заголовок</h1>  
-  <p><a><img src="https://github.com/warefare/project/blob/db4cf1e2a5a0bbc2de80b4cfc46bc1c0bbe68bad/img/picture_1.jpg" alt="Абсолютный"></a>Абсолютный путь к картинке</p>
+  <p><a><img src="/img/picture_1.jpg" alt="Абсолютный"></a>Абсолютный путь к картинке</p>
   <p><a><img src="..\..\img\picture_2.jpg" alt="Относительный"/></a>Относительный путь</p>
   <p>Тут могла бы быть ваша реклама</p>
 </body>
