--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -7,8 +7,8 @@
  
 <body>
   <h1>Заголовок</h1>  
-  <p><a><img src="\img\picture_1.jpg" alt="Абсолютный"></a>Абсолютный путь к картинке</p>
-  <p><a><img src="..\..\img\picture_2.jpg" alt="Относительный"/></a>Относительный путь</p>
+  <img src="\img\picture_1.jpg" alt="Абсолютный">Абсолютный путь к картинке
+  <img src="..\..\img\picture_2.jpg" alt="Относительный"/>Относительный путь
   <p>Тут могла бы быть ваша реклама</p>
 </body>
  
