--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <h1>Заголовок</h1>
-  <img src="\img\picture1.jpg" alt="Абсолютный">Абсолютный путь к картинке
+  <img src="warefare.github.io\img\picture1.jpg" alt="Абсолютный">Абсолютный путь к картинке
   <img src="..\..\img\picture2.jpg" alt="Относительный" />Относительный путь
   <p>Тут могла бы быть ваша реклама</p>
 </body>
